# osbad

./: .dockerignore  .env  .readthedocs.yaml  Dockerfile  README.md  main.py  pyproject.toml  test_osbad_installation.py
database/: .gitattributes  severson_eda_notebook.ipynb  test_dataset_severson.db  test_features_severson.db  tohoku_benchmark_dataset.db  train_dataset_severson.db  train_features_severson.db
distance/: distance_01_euclidean.ipynb  distance_02_manhattan.ipynb  distance_03_mahalanobis.ipynb  distance_04_minkowski.ipynb
docs/: conf.py  dataset.rst  doc_01_quickstart.rst  doc_02_dataset_overview.rst  doc_03_models_overview.rst  iforest_example.rst  ml_02_severson_iforest_hyperparam_tuned.rst  ml_04_tohoku_autoencoder_hyperparam_tuned.rst  ml_05_severson_dbad_euclidean.rst  ml_06_severson_knn_proxy_regr.rst  models.rst  quickstart.rst  requirements.txt  severson.rst  severson_dataset.rst  severson_dbad_euclidean_example.rst  severson_iforest_baseline.rst  severson_iforest_example.rst  severson_iforest_hyperparam_tuned.rst  severson_knn_proxy_regr_example.rst  tohoku.rst  tohoku_iforest_example.rst
docs/docs_output/: .buildinfo  .buildinfo.bak  dataset.html  doc_01_quickstart.html  doc_02_dataset_overview.html  doc_03_models_overview.html  ds_01_severson_dataset.html  index.html  (+19 more)
quick_start_tutorials/: 03_iforest_tohoku_dataset.ipynb
stats/: stats_01_standard_deviation.ipynb  stats_02_median_absolute_deviation_MAD.ipynb  stats_03_interquartile_range_IQR.ipynb  stats_04_zscore.ipynb  stats_05_modified_zscore.ipynb
workflows/: dockerhub-publish.yml
(+240 files in other folders)
