[project]
name = "osbad"
dynamic = ["version"]
description = "OSBAD (Open-source Benchmark of Anomaly Detection)"
readme = "README.md"
authors = [
    { name = "Mei-Chin Pang", email = "mei-chin.pang@basf.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb==1.3.2",
    "fireducks>=1.4.0",
    "llvmlite>=0.44.0",
    "matplotlib>=3.10.5",
    "natsort>=8.4.0",
    "numpy<=2.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyod>=2.0.5",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.8.0",
]
license = "Apache-2.0"
keywords = [
    "benchmark",
    "anomaly detection",
    "outlier detection",
    "unsupervised machine learning",
    "hyperparameter tuning",
    "statistics"]

[project.urls]
Documentation = "https://osbad.readthedocs.io/en/latest/"
Repository = "https://github.com/meichinpang/osbad/tree/master"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

# Use dynamic versioning with git tag
[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[dependency-groups]
dev = [
    "furo>=2025.7.19",
    "ipywidgets>=8.1.7",
    "jupytext>=1.17.2",
    "notebook>=7.4.5",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-autobuild>=2024.10.3",
]